perfect scrollbar bug fixed

--- a/src/components/work/workscreen.css
+++ b/src/components/work/workscreen.css
@@ -391,3 +391,7 @@ nav {
     font-weight: normal;
 
 }
+
+.scrollbar-container{
+    height: auto;
+}
